fix: some problems and new API
